1. Collection API Улучшения[#97660]