@@ -14,7 +14,7 @@ public class ConvertList2ArrayTest {
     public void when7ElementsThen9() {
         ConvertList2Array list = new ConvertList2Array();
         int[][] result = list.toArray(
-                new ArrayList<>(Arrays.asList(1, 2, 3, 4, 5, 6, 7)),
+                List.of(1, 2, 3, 4, 5, 6, 7),
                 2
         );
         int[][] expect = {
@@ -27,12 +27,9 @@ public class ConvertList2ArrayTest {
     public void whenList3RowThen1Row() {
         ConvertList2Array list = new ConvertList2Array();
         List<Integer> result = list.convert(
-                new ArrayList<>(Arrays.asList(
-                        new int[][] {{1, 2, 3}, {4}, {5, 6, 7, 8}}
-                        )
-                )
+                List.of(new int[][] {{1, 2, 3}, {4}, {5, 6, 7, 8}})
         );
-        List<Integer> expect = new ArrayList<Integer>(Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8));
+        List<Integer> expect = List.of(1, 2, 3, 4, 5, 6, 7, 8);
         assertThat(result, is(expect));
     }
 }
